--- a/app/src/main/res/layout/send_task.xml
+++ b/app/src/main/res/layout/send_task.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout style="@style/RootCoordinator"
+<FrameLayout style="@style/RootCoordinator"
     android:fitsSystemWindows="true"
+    android:padding="0dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolBar"
@@ -18,6 +22,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_marginTop="?attr/actionBarSize"
+        android:padding="12dp"
         android:animateLayoutChanges="true"
         style="@style/TaskLinearLayout_TaskEventPage">
 
@@ -46,6 +51,10 @@
         android:id="@+id/sendTaskButton"
         style="@style/ShareTaskButton_UserTaskInbox"/>
 
+    <include
+        android:visibility="gone"
+        layout="@layout/circular_progress_middle"/>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</FrameLayout>
